force-app/main/default/objects/WorkOrder/fields/Fuel_Quantity_Gallons__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Quantity_Gallons__c</fullName>
    <label>Fuel Quantity (Gallons)</label>
    <precision>8</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>