force-app/main/default/objects/WorkOrder/fields/IoT_Device_Installed__c.field-meta.xml
<CustomField>
    <fullName>IoT_Device_Installed__c</fullName>
    <label>IoT Device Installed</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Installation Work Orders</relationshipLabel>
    <relationshipName>Installation_Work_Orders</relationshipName>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>