force-app/main/default/objects/WorkOrder/fields/Target_Tank__c.field-meta.xml
<CustomField>
    <fullName>Target_Tank__c</fullName>
    <label>Target Tank</label>
    <referenceTo>Tank__c</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>