force-app/main/default/objects/WorkOrder/recordTypes/Delivery.recordType-meta.xml
<RecordType>
    <fullName>Delivery</fullName>
    <active>true</active>
    <description>Fuel delivery services</description>
    <label>Delivery</label>
</RecordType>