force-app/main/default/objects/WorkOrder/recordTypes/Delivery_Installation.recordType-meta.xml
<RecordType>
    <fullName>Delivery_Installation</fullName>
    <active>true</active>
    <description>Combined delivery and installation service</description>
    <label>Delivery + Installation</label>
</RecordType>